--- a/index.html
+++ b/index.html
@@ -74,10 +74,9 @@
     
             </main>
     
-<!--             <footer>
-                <h4>Footer</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste amet aliquam ipsum provident dolores quidem quos, nihil facere mollitia! Itaque labore totam laudantium placeat ea laborum asperiores numquam mollitia est!</p>
-            </footer> -->
+            <footer>
+                <p>Designed with <spam class="heart">&hearts;</spam></p>
+            </footer>
 
         </div>  
 
